fix: main container alignment

--- a/src/styles/contacts.styl
+++ b/src/styles/contacts.styl
@@ -9,7 +9,7 @@
 .list-wrapper
     width 100%
     max-width 80rem
-    margin auto
+    margin 0 auto
     box-shadow 0 4px 4px 0 silver
 
 .topbar
